--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "api/server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node api/server.js",
-    "dev": "nodemon api/server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "vercel-build": "echo 'Build complete'"
   },
   "keywords": [],
